# computer-science-project

./: .gitignore  Dockerfile  README.md  compose.yaml  config.py  main.py  pyproject.toml
02-code/: config.py  promptfooconfig-redteam.yaml  promptfooconfig.yaml  pyproject.toml
02-code/impact_analysis/: prompts.py
02-code/mock_data/: impacted_architecture.json
02-code/solution_modelling/: prompts.py
02-code/utils/: get_model.py  visualize_business_process.py
impact_analysis/: impact_analysis.py  prompts.py
mock_data/: generated_solution.json  impacted_architecture.json  service_reservation_e2e_process.json
solution_modelling/: prompts.py  solution_modeling.py
utils/: data_loader.py
