[tool.poetry]
name = "computerscienceproject"
version = "0.1.0"
description = ""
authors = ["Doniyor Rufatov <Doniyor_Rufatov@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
