[tool.poetry]
name = "computerscienceproject"
version = "0.1.0"
description = ""
authors = ["Doniyor Rufatov <Doniyor_Rufatov@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.12"
python-dotenv = "^1.0.1"
langchain-openai = "^0.3.0"
networkx = "^3.4.2"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
